--- a/.github/workflows/ci-create-pr.yml
+++ b/.github/workflows/ci-create-pr.yml
@@ -35,11 +35,8 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration Release
 
-      - name: Test UnitTests
-        run: dotnet test ./API-Actions/UnitTests/UnitTests.csproj --configuration Release --verbosity normal
-
-      - name: Test IntegrationTests
-        run: dotnet test ./API-Actions/IntegrationTests/IntegrationTests.csproj --configuration Release --verbosity normal
+      - name: Test all projects
+        run: dotnet test ./Solution.sln --configuration Release --verbosity normal
 
 
   create-pr:
@@ -88,4 +85,5 @@ jobs:
           merge-method: squash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
