--- a/.github/workflows/ci-create-pr.yml
+++ b/.github/workflows/ci-create-pr.yml
@@ -38,7 +38,6 @@ jobs:
       - name: Test all projects
         run: dotnet test ./Solution.sln --configuration Release --verbosity normal
 
-
   create-pr:
     name: create-pr-if-tests-pass-ok
     runs-on: ubuntu-latest
@@ -49,21 +48,21 @@ jobs:
         id: create_pr
         uses: actions/github-script@v6
         with:
+          github-token: ${{ secrets.PAT_TOKEN }}   # <-- usa el PAT aquí
           script: |
             const branch = process.env.GITHUB_REF.replace('refs/heads/','');
             const base = 'main';
             // buscar PR abierta
-            const {data: prs} = await github.rest.pulls.list({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              head: `${context.repo.owner}:${branch}`,
-              base,
-              state: 'open'
+            const { data: prs } = await github.rest.pulls.list({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            head: `${context.repo.owner}:${branch}`,
+            base,
+            state: 'open'
             });
             if (prs.length > 0) {
               console.log(`PR already exists: ${prs[0].html_url}`);
-              core.setOutput('pr_number', prs[0].number);
-              return;
+              return prs[0].number;
             }
             // crear PR
             const pr = await github.rest.pulls.create({
@@ -75,15 +74,13 @@ jobs:
               body: `PR auto-creado por CI: las pruebas pasaron. Por favor revisar y aprobar.`,
             });
             console.log(`Created PR: ${pr.data.html_url}`);
-            core.setOutput('pr_number', pr.data.number);
+            return pr.data.number;
 
       - name: Enable auto-merge for the PR
-        if: ${{ steps.create_pr.outputs.pr_number != '' }}
+        if: ${{ steps.create_pr.outputs.result != '' }}
         uses: peter-evans/enable-pull-request-automerge@v2
         with:
-          pull-request-number: ${{ steps.create_pr.outputs.pr_number }}
+          pull-request-number: ${{ steps.create_pr.outputs.result }}
           merge-method: squash
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}   # <-- también pasamos el PAT aquí
