--- a/.github/workflows/ci-create-pr.yml
+++ b/.github/workflows/ci-create-pr.yml
@@ -35,11 +35,11 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration Release
 
-      - name: Test
-        run: dotnet test --no-build --verbosity normal
+      - name: Test all projects
+        run: dotnet test ./Solution.sln --configuration Release --verbosity normal
 
   create-pr:
-    name: create-pr-if-tests-pass-ok
+    name: create-pr-if-tests-pass
     runs-on: ubuntu-latest
     needs: build-and-test
 
@@ -48,11 +48,12 @@ jobs:
         id: create_pr
         uses: actions/github-script@v6
         with:
+          github-token: ${{ secrets.PAT_TOKEN }}   # <- usamos el PAT guardado
           script: |
             const branch = process.env.GITHUB_REF.replace('refs/heads/','');
             const base = 'main';
-            // buscar PR abierta
-            const {data: prs} = await github.rest.pulls.list({
+            // buscar PR abierta desde esta rama hacia main
+            const { data: prs } = await github.rest.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
               head: `${context.repo.owner}:${branch}`,
@@ -61,8 +62,7 @@ jobs:
             });
             if (prs.length > 0) {
               console.log(`PR already exists: ${prs[0].html_url}`);
-              core.setOutput('pr_number', prs[0].number);
-              return;
+              return prs[0].number;
             }
             // crear PR
             const pr = await github.rest.pulls.create({
@@ -74,13 +74,5 @@ jobs:
               body: `PR auto-creado por CI: las pruebas pasaron. Por favor revisar y aprobar.`,
             });
             console.log(`Created PR: ${pr.data.html_url}`);
-            core.setOutput('pr_number', pr.data.number);
-
-      - name: Enable auto-merge for the PR
-        if: ${{ steps.create_pr.outputs.pr_number != '' }}
-        uses: peter-evans/enable-pull-request-automerge@v2
-        with:
-          pull-request-number: ${{ steps.create_pr.outputs.pr_number }}
-          merge-method: squash
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            return pr.data.number;
+    
